--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.45.1",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "material-react-table": "^2.6.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loading": "^2.0.3",
